--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
+    "@headlessui/tailwindcss": "^0.2.0",
+    "@remixicon/react": "^4.2.0",
+    "@tremor/react": "^3.16.2",
     "moment": "^2.30.1",
     "next": "14.2.3",
     "react": "^18",
@@ -16,6 +20,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
