--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/tailwindcss": "^0.2.0",
     "@remixicon/react": "^4.2.0",
     "@tremor/react": "^3.16.2",
+    "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "moment": "^2.30.1",
     "next": "14.2.3",
