--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@tremor/react": "^3.16.2",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "moment": "^2.30.1",
     "next": "14.2.3",
     "react": "^18",
     "react-data-table-component": "^7.6.2",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
